
XX XXX XXXX
Version 6.1.0
======================================================================================================================
AllOverIt
  * Re-worked the registration of the ObjectPropertySerializer filters as the process was not thread-saafe.
    Breaking change.


24 Nov 2022
Version 6.0.1
======================================================================================================================
AllOverIt.Validation
  * Fixed null reference issue for the case when creating a RuleFor(model => model)...


22 Nov 2022
Version 6.0.0
======================================================================================================================
  * Published v6.0.0.


21 Nov 2022
Version 6.0.0-RC.15
======================================================================================================================
All except AllOverIt.Aws.Cdk.AppSync and AllOverIt.ReactiveUI
  * Added support for NET 7.0

AllOverIt
  * ObjectPropertySerializer now correctly applies enumerable collation seperator when there is a filter (which
    overrides the global enumerable options).
  * ObjectMapper's Map<TTarget>(object source) now returns null if the source is null.
    ObjectMapper's Map<TSource, TTarget>(TSource source, TTarget target) is now constrained to 'class' types.
  * Added ExceptionExtensions.Walk() to traverse an exception and its' inner exceptions.

AllOverIt.Pagination
  * Updated PageResult<T> to allow the secondary set of results to come from an IEnumerable.

AllOverIt.Csv
  * Updated CsvHelper to v30.0.1

AllOverIt.Aws.Cdk.AppSync
  * Updated Amazon.CDK.AWS.AppSync to v1.181.0


12 Oct 2022
Version 6.0.0-RC.14
======================================================================================================================
AllOverIt
  * Dispose a breadcrumbs enumerator
  * Unsealed PageResult<TResult> so it can be augmented with additional information through inheritance.

AllOverIt.Aws.Cdk.AppSync